--- a/cotalog.html
+++ b/cotalog.html
@@ -20,7 +20,7 @@
         <br>Адрес:Улица Мира, д. 485.
         <br>Email:<a href="mailto:ilya.stremousov@mail.ru">ilya.stremousov@mail.ru</a>
         <footer>
-            &copy; все права защищены
+             Все права защищены &copy;
         </footer>
 </body>
 </html>
