--- a/dsgame.html
+++ b/dsgame.html
@@ -19,6 +19,7 @@
     <hr>
     <fieldset class="fieldset">
     <img src="phon/dsgame.jpg" width="400">
+    <leg><h2>Death Stranding</h2></leg>
 <fieldset class="fieldset">
 <legend>Описание</legend>
 <leg>
@@ -45,10 +46,11 @@
     <li>Место на диске: 80 GB</li>
 </ul>
 </fieldset>
-<p>Стоимость 1500 р.</p>
+<leg>Стоимость 1500 р.</leg>
 </fieldset>
-<hr>
-    Все права защищены.
+<footer>
+    Все права защищены &copy;
+ </footer>
     <script src="phon/button.js"></script>
 </body>
 </html>
