--- a/mk11game.html
+++ b/mk11game.html
@@ -20,7 +20,7 @@
  </header>
      <fieldset class="fieldset">
     <img src="phon/mkgame.jpg"width="400" >
-    <p class=".color_p"><h2>  Mortal Kombat 11</h2></p>
+    <leg><h2> Mortal Kombat 11</h2></leg>
 
   
 <fieldset class="fieldset">
@@ -53,7 +53,7 @@
        <li>Место на диске: 80 GB</li>
       </ul>
     </fieldset>
- <p>Стоимость 1600р.</p>
+ <leg>Стоимость 1600р.<leg>
 </fieldset> 
 <footer>
   Все права защищены &copy;
