--- a/cotalog.html
+++ b/cotalog.html
@@ -16,9 +16,9 @@
          <a href="Sitekrut.html" class="aner">В каталог</a>
         </span>
      </header>
-        Контактный номер телефона:8(916)447-61-95 
+       <leg> Контактный номер телефона:8(916)447-61-95 
         <br>Адрес:Улица Мира, д. 485.
-        <br>Email:<a href="mailto:ilya.stremousov@mail.ru">ilya.stremousov@mail.ru</a>
+        <br>Email:<a href="mailto:ilya.stremousov@mail.ru">ilya.stremousov@mail.ru</a></leg>
         <footer>
              Все права защищены &copy;
         </footer>
