--- a/cotalog.html
+++ b/cotalog.html
@@ -18,7 +18,7 @@
      </header>
        <leg> Контактный номер телефона:8(916)447-61-95 
         <br>Адрес:Улица Мира, д. 485.
-        <br>Email:<a href="mailto:ilya.stremousov@mail.ru">ilya.stremousov@mail.ru</a></leg>
+        <br>Email:<a href="mailto:ilya.stremousov@mail.ru" class="aner">ilya.stremousov@mail.ru</a></leg>
         <footer>
              Все права защищены &copy;
         </footer>
